--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "ineuron_backend",
   "version": "1.0.0",
   "description": "assignment",
-  "main": "index.js",
+  "main": "server.js",
+  "engines": {
+    "node": "14.x"
+  },
   "scripts": {
     "test": "mocha",
     "start" : "node server.js"
