--- a/api-docs.yml
+++ b/api-docs.yml
@@ -3,8 +3,7 @@ info:
   title: Products API
   version: '1.0.0'
   description: 'This is a simple Products API for demonstration purposes.'
-# basePath: 'http://localhost:3000'
-  basePath: 'https://ineuron-backend-5dpekm446-prince-1501.vercel.app'
+basePath: 'http://localhost:3000'
 paths:
   /products:
     get:
