--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "main": "server.js",
   "scripts": {
     "test": "mocha",
-    "start" : "node server.js"
+    "start": "node server.js"
   },
   "author": "PRINCE KUMAR",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.1",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^6.9.1",
     "swagger-jsdoc": "^6.2.8",
